--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "body-parser": "^1.17.2",
-    "express": "^4.15.3"
+    "body-parser": "^1.18.2",
+    "bunyan": "^1.8.12",
+    "express": "^4.16.2",
+    "mysql": "^2.15.0",
+    "swagger-parameters": "^1.3.1",
+    "z-schema": "^3.19.1"
   }
 }
