--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "SENG365-Auction-Site-API",
   "version": "0.0.1",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "test": "./node_modules/.bin/mocha"
   },
   "dependencies": {
     "body-parser": "^1.18.2",
@@ -12,5 +13,12 @@
     "swagger-parameters": "^1.3.1",
     "z-schema": "^3.19.1",
     "convict": "^4.0.2"
+  },
+  "devDependencies": {
+    "chai": "^4.1.2",
+    "chai-http": "^3.0.0",
+    "chai-json": "^1.0.0",
+    "mocha": "^5.0.4",
+    "request": "^2.83.0"
   }
 }
