--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
   "dependencies": {
     "body-parser": "^1.18.2",
     "bunyan": "^1.8.12",
+    "convict": "^4.0.2",
+    "dateformat": "^3.0.3",
+    "execsql": "0.0.3",
     "express": "^4.16.2",
     "mysql": "^2.15.0",
+    "node-datetime": "^2.0.6",
     "swagger-parameters": "^1.3.1",
-    "z-schema": "^3.19.1",
-    "convict": "^4.0.2"
+    "z-schema": "^3.19.1"
   },
   "devDependencies": {
     "chai": "^4.1.2",
